--- a/config/airflow.cfg
+++ b/config/airflow.cfg
@@ -48,13 +48,13 @@ default_timezone = utc
 #
 # Variable: AIRFLOW__CORE__EXECUTOR
 #
-executor = LocalExecutor
+# HANDLED BY DOCKER-COMPOSE executor = LocalExecutor
 
 # The auth manager class that airflow should use. Full import path to the auth manager class.
 #
 # Variable: AIRFLOW__CORE__AUTH_MANAGER
 #
-auth_manager = airflow.api_fastapi.auth.managers.simple.simple_auth_manager.SimpleAuthManager
+# HANDLED BY DOCKER-COMPOSE auth_manager = airflow.api_fastapi.auth.managers.simple.simple_auth_manager.SimpleAuthManager
 
 # The list of users and their associated role in simple auth manager. If the simple auth manager is
 # used in your environment, this list controls who can access the environment.
@@ -108,7 +108,7 @@ max_active_tasks_per_dag = 16
 #
 # Variable: AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION
 #
-dags_are_paused_at_creation = True
+# HANDLED BY DOCKER-COMPOSE dags_are_paused_at_creation = True
 
 # The maximum number of active DAG runs per DAG. The scheduler will not create more DAG runs
 # if it reaches the limit. This is configurable at the DAG level with ``max_active_runs``,
@@ -147,7 +147,7 @@ max_consecutive_failed_dag_runs_per_dag = 0
 #
 # Variable: AIRFLOW__CORE__LOAD_EXAMPLES
 #
-load_examples = False
+# HANDLED BY DOCKER-COMPOSE load_examples = True
 
 # Path to the folder containing Airflow plugins
 #
@@ -476,7 +476,7 @@ max_templated_field_length = 4096
 #
 # Variable: AIRFLOW__CORE__EXECUTION_API_SERVER_URL
 #
-# execution_api_server_url = 
+# HANDLED BY DOCKER-COMPOSE  execution_api_server_url = 
 
 [database]
 # Path to the ``alembic.ini`` file. You can either provide the file path relative
@@ -494,7 +494,7 @@ alembic_ini_file_path = alembic.ini
 #
 # Variable: AIRFLOW__DATABASE__SQL_ALCHEMY_CONN
 #
-sql_alchemy_conn = sqlite:////opt/airflow/airflow.db
+# HANDLED BY DOCKER-COMPOSE sql_alchemy_conn = sqlite:////opt/airflow/airflow.db
 
 # Extra engine specific keyword args passed to SQLAlchemy's create_engine, as a JSON-encoded value
 #
@@ -1874,7 +1874,7 @@ scheduler_health_check_threshold = 30
 #
 # Variable: AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK
 #
-enable_health_check = False
+# HANDLED BY DOCKER-COMPOSE enable_health_check = False
 
 # When you start a scheduler, airflow starts a tiny web server
 # subprocess to serve a health check on this host
@@ -2410,7 +2410,7 @@ worker_enable_remote_control = true
 #
 # Variable: AIRFLOW__CELERY__BROKER_URL
 #
-broker_url = redis://redis:6379/0
+# HANDLED BY DOCKER-COMPOSE broker_url = redis://redis:6379/0
 
 # The Celery result_backend. When a job finishes, it needs to update the
 # metadata of the job. Therefore it will post a message on a message bus,
@@ -2424,7 +2424,7 @@ broker_url = redis://redis:6379/0
 #
 # Variable: AIRFLOW__CELERY__RESULT_BACKEND
 #
-# result_backend = 
+# HANDLED BY DOCKER-COMPOSE  result_backend = 
 
 # Optional configuration dictionary to pass to the Celery result backend SQLAlchemy engine.
 #
