--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -72,6 +72,8 @@ x-airflow-common:
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
     # The following line can be used to set a custom config file, stored in the local config folder
     AIRFLOW_CONFIG: '/opt/airflow/config/airflow.cfg'
+    AIRFLOW_CONN_MY_GIT_REPO: '${AIRFLOW_CONN_MY_GIT_REPO}'
+    AIRFLOW__DAG_PROCESSOR__DAG_BUNDLE_CONFIG_LIST: '${AIRFLOW__DAG_PROCESSOR__DAG_BUNDLE_CONFIG_LIST}'
   volumes:
 #    - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
